--- a/FrontEnd/client/package.json
+++ b/FrontEnd/client/package.json
@@ -18,6 +18,29 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-redux": "^7.1.24",
+    "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.2",
+    "formik": "^2.2.9",
+    "react-bootstrap": "^2.7.0",
+    "react-lazy-load-image-component": "^1.5.5",
+    "react-loading-skeleton": "^3.1.0",
+    "react-redux": "^8.0.2",
+    "react-transition-group": "^4.4.5",
+    "redux": "^4.2.0",
+    "sass": "^1.54.9",
+    "swiper": "^8.4.2",
+    "typewriter-effect": "^2.19.0",
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@types/react-icons": "^3.0.0",
+    "@types/react-transition-group": "^4.4.5",
+    "@types/swiper": "^6.0.0",
+    "@types/uuid": "^8.3.4"
   }
 }
