--- a/FrontEnd/client/package.json
+++ b/FrontEnd/client/package.json
@@ -20,6 +20,8 @@
     "formik": "^2.2.9",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw": "^0.16.0",
+    "moment": "^2.29.4",
+    "momment": "^0.0.1",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
