--- a/FrontEnd/admin/package.json
+++ b/FrontEnd/admin/package.json
@@ -13,7 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
+    "qs": "^6.12.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -21,6 +24,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.28",
+    "@types/qs": "^6.9.15",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
