--- a/FrontEnd/admin/tsconfig.app.json
+++ b/FrontEnd/admin/tsconfig.app.json
@@ -8,7 +8,9 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@src/types":["./src/types/index"],
+      "@src/lib":["./src/library/index"],
     }
   }
 }
